--- a/BookstoreApp/BookstoreApp.csproj
+++ b/BookstoreApp/BookstoreApp.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\BookStore_DL\BookStore_DL.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	</ItemGroup>
+
 </Project>
