--- a/BookstoreApp/appsettings.json
+++ b/BookstoreApp/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "MongoConfiguration": {
+    "ConnectionString": "mongodb+srv://pu_net_core:123456y@pu-net-core.52gte.mongodb.net/BarManagerB?retryWrites=true&w=majority",
+    "DatabaseName": "BookStore"
+  },
+
+  "JwtSettings": {
+    "Secret":  "ggtyy2ujejjjd89dksmsksowj"
+  }
 }
